# leaf-0.4

./: .gitattributes  .gitignore  NEW_PLAN.md  NOTES.md  PLAN.md  compose.yaml  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
.regal/: config.yaml
arbiter-explorer/: NOTES.md  PLAN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
arbiter-explorer/public/wasm/: arbiter_wasm_bg.wasm
arbiter-explorer/src/: App.svelte  app.css
arbiter-explorer/src/components/: ActionPanel.svelte  Canvas.svelte  CreateArbiterBar.svelte  DelegationEdge.svelte  DetailPanel.svelte  EmptyState.svelte  Notifications.svelte  SpaceNode.svelte  Toolbar.svelte  UserList.svelte
arbiter-explorer/src/lib/: simulation-store.svelte.ts  simulator.ts  types.ts  utils.ts
arbiter-manager/: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  DESIGN.md  PRODUCT.md  lexicons  lexicons.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.node.json  vite.config.ts
arbiter-manager/src/: app.css  app.d.ts  app.html
arbiter-manager/src/lib/: api.ts  arbiter.ts  auth.svelte.ts  auth.ts  default-policy.ts  oauth-callback.ts  pds-client.ts  pds-setup-client.ts  query-client.ts  resolver.ts  setup-store.svelte.ts  setupState.svelte.ts  store.svelte.ts  types.ts  wasm.ts
arbiter-manager/src/lib/components/: AddMemberSheet.svelte  ArbiterDashboard.svelte  CommunitySelector.svelte  ConfigTab.svelte  ConfirmModal.svelte  CreateSpaceSheet.svelte  DebugTab.svelte  LookupArbiterSheet.svelte  MarketingHero.svelte  MembersTab.svelte  MonacoEditor.svelte  PolicyEditor.svelte  PolicyTab.svelte  Sidebar.svelte  SpacesTab.svelte  TopBar.svelte  WelcomePrompt.svelte
arbiter-manager/src/lib/components/setup/: SetupStepAppPassword.svelte  SetupStepComplete.svelte  SetupStepEmailCode.svelte  SetupStepIntro.svelte  SetupStepOAuth.svelte  SetupStepSelectAdmin.svelte
arbiter-manager/src/routes/: +layout.svelte  +page.svelte
arbiter-manager/src/routes/(app)/: +layout.svelte  +page.svelte
arbiter-manager/src/routes/(app)/dashboard/: +layout.svelte  +page.svelte
arbiter-manager/src/routes/(app)/setup/: +page.svelte
arbiter-manager/src/routes/dashboard/: +layout.svelte
arbiter-manager/src/routes/dashboard/[did]/: +page.svelte
arbiter-manager/src/routes/setup/: +page.svelte
arbiter-manager/static/: oauth-client-metadata.json
arbiter-simulator/: DESIGN.md  NOTES.md  PLAN.md  PRODUCT.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
arbiter-simulator/src/: App.svelte  app.css  arbiter-wasm2.d.ts  main.ts
arbiter-simulator/src/components/: AccessLegend.svelte  ActionPanel.svelte  AdvancedConfigPanel.svelte  ArbiterActions.svelte  ArbiterNode.svelte  Canvas.svelte  CreateArbiterBar.svelte  DelegationEdge.svelte  DetailPanel.svelte  EmptyState.svelte  MonacoEditor.svelte  PolicyEditor.svelte  Sidebar.svelte  SpaceNode.svelte  Toolbar.svelte  UserList.svelte
arbiter-simulator/src/lib/: monaco.ts  rego-highlight.ts  rego-lang.ts  simulation-store.svelte.ts  simulator.test.ts  simulator.ts  types.ts  utils.ts
crates/arbiter-core/: Cargo.toml
crates/arbiter-core-wasm/: Cargo.toml
crates/arbiter-core-wasm/src/: lib.rs
crates/arbiter-core/spec/: arbiter.qnt
crates/arbiter-core/src/: core.rs  futures.rs  lib.rs  mbt.rs  policy.rs  server.rs  service.rs
crates/arbiter-core/tests/: access_levels_tests.rs  test_harness.rs
crates/arbiter-core2/: Cargo.toml
crates/arbiter-core2/src/: core.rs  lib.rs  policy.rs  policy_vm.rs
crates/arbiter-core2/tests/: default_policy.rs
crates/arbiter-core2/tests/common/: mod.rs
crates/arbiter-core3/: Cargo.toml
crates/arbiter-core3/src/: core.rs  lib.rs  policy.rs
crates/arbiter-server/: .gitignore  Cargo.toml  build.rs  lexicons
crates/arbiter-server/src/: auth.rs  did.rs  handlers.rs  io.rs  lexicons.rs  main.rs  persistence.rs  plc.rs  policy.rs  resolver.rs  state.rs
crates/arbiter-server2/: Cargo.toml
crates/arbiter-server2/src/: auth.rs  handlers.rs  io.rs  main.rs  persistence.rs
crates/arbiter-wasm/: Cargo.toml
crates/arbiter-wasm/src/: lib.rs
crates/arbiter-wasm2/: Cargo.toml
crates/arbiter-wasm2/src/: lib.rs
crates/pds-admin-client/: Cargo.toml
crates/pds-admin-client/src/: lib.rs
crates/pds-admin-client/tests/: tranquil_integration.rs
crates/policy-core/: Cargo.toml
crates/policy-core-wasm/: Cargo.toml
crates/policy-core-wasm/src/: lib.rs
crates/policy-core/src/: lib.rs
crates/regovm-async-builtin-demo/: Cargo.toml
crates/regovm-async-builtin-demo/src/: main.rs
crates/tranquil-client/: Cargo.toml  README.md
crates/tranquil-client/src/: error.rs  lib.rs
crates/tranquil-client/tests/: tranquil_integration.rs
docs/: tranquil-delegation.md
lexicons/: .gitignore  DESIGN.md  PRODUCT.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  validate.js
lexicons/app/bsky/actor/: getProfile.json
lexicons/com/atproto/identity/: requestPlcOperationSignature.json  signPlcOperation.json  submitPlcOperation.json
lexicons/com/atproto/repo/: defs.json  putRecord.json
lexicons/com/atproto/server/: getServiceAuth.json
lexicons/town/muni/: arbiter.json
lexicons/town/muni/arbiter/: configureSpace.json  createAppPasswordArbiter.json  createArbiter.json  createDid.json  createSpace.json  defs.json  deleteArbiter.json  deleteSpace.json  getArbiterConfig.json  getMembers.json  getSpaceConfig.json  getSpaceMembers.json  listSpaces.json  removeMember.json  removeSpaceMember.json  resolveMembers.json  resolveSpaceMembers.json  setArbiterConfig.json  setMemberAccess.json  setSpaceConfig.json  setSpaceMemberAccess.json  updateDidDoc.json
old/spec/arbiter/: arbiter_core.qnt  arbiter_test.qnt
policies/: access-levels.rego
policies/arbiter/: access-levels.rego  default-policy.rego
spec/: arbiter.qnt
spec/arbiter/: AUDIT.md  arbiter.qnt  arbiter.qnt.new  arbiter_core.qnt  arbiter_core_mbt.qnt  arbiter_test.qnt
spec/lib/: basicSpells.qnt  choreo.qnt  utils.qnt
spec/scratch/: version_wrapping.qnt
typelex/: externals.tsp  main.tsp
(+7 files in other folders)
