[package]
name = "arbiter-core-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
arbiter-core = { path = "../arbiter-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"

# Required for wasm32-unknown-unknown target (transitive through regorus → rand)
# This enables `wasm_js` so getrandom compiles on that target.
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
