[package]
name = "arbiter-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["async"]
async = ["tokio", "async-trait"]

[dependencies]
anyhow = "1.0.102"
async-trait = { version = "0.1", optional = true }
im = { version = "15.1.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"], optional = true }

[dev-dependencies]
quint-connect = "0.1.1"
