[package]
name = "arbiter-core2"
version = "0.1.0"
edition = "2024"

[features]
default = ["async"]
async = ["tokio", "async-trait"]
js = ["dep:tsify", "serde-wasm-bindgen", "wasm-bindgen"]

[dependencies]
im = { version = "15.1.0", features = ["serde"] }
regorus = { version = "0.10", default-features = false, features = ["rvm", "arc"] }
indexmap = { version = "2", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Async
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"], optional = true }

# JS / WASM integration
tsify = { version = "0.5", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
