[package]
name = "arbiter-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arbiter-server"
path = "src/main.rs"

[dependencies]
arbiter-core = { path = "../arbiter-core" }
anyhow = "1"
async-trait = "0.1"
atproto-identity = "0.14"
atproto-oauth = { version = "0.14", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
salvo = { version = "0.76", features = ["server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
