[package]
name = "arbiter-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arbiter-server"
path = "src/main.rs"

[dependencies]
arbiter-core = { path = "../arbiter-core" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
salvo = { version = "0.76", features = ["server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jacquard-common = { version = "0.11.0", features = ["futures"] }
jacquard-lexicon = "0.11.1"
jacquard-derive = "0.11.0"
miette = "7.6.0"
thiserror = "2.0.18"
atproto-identity = "0.14.5"
atproto-oauth = "0.14.5"

[build-dependencies]
anyhow = "1"
jacquard-lexicon = "0.11.1"
