[package]
name = "arbiter-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arbiter-server"
path = "src/main.rs"

[dependencies]
arbiter-core = { path = "../arbiter-core" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
salvo = { version = "0.76", features = ["affix-state", "server", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
atproto-identity = "0.14.5"
atproto-oauth = "0.14.5"
atrium-xrpc-client = { version = "0.5.15", features = ["reqwest"], default-features = false }
moka = { version = "0.12.15", features = ["future"] }
atrium-xrpc = "0.12.4"
atrium-api = { version = "0.25.8", default-features = false, features = ["agent"] }
