[package]
name = "arbiter-server2"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arbiter-server2"
path = "src/main.rs"

[dependencies]
arbiter-core3 = { path = "../arbiter-core3" }
policy-core = { path = "../policy-core" }
anyhow = "1"
async-trait = "0.1"
atproto-identity = "0.14"
atproto-oauth = { version = "0.14", default-features = false }
base64 = "0.22"
salvo = { version = "0.76", features = ["server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bs58 = "0.5"
hex = "0.4"
ulid = "1"
