[package]
name = "pds-admin-client"
version = "0.1.0"
edition = "2024"

[dependencies]
jacquard = { version = "0.12.0-beta.2", default-features = false, features = ["api", "derive", "cache", "api_bluesky"] }
reqwest = { version = "0.12", features = ["rustls-tls-native-roots"], default-features = false }
anyhow = "1.0.102"
passwords = "3.1.16"

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
