[package]
name = "policy-core-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
policy-core = { path = "../policy-core" }
regorus = { version = "0.10.1", default-features = false, features = ["rvm", "arc", "std"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Required for wasm32-unknown-unknown target (transitive through regorus → rand)
# This enables `wasm_js` so getrandom compiles on that target.
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
