[package]
name = "tranquil-client"
version = "0.1.0"
edition = "2024"

[dependencies]
jacquard = { version = "0.12.0-beta.2", default-features = false, features = ["api", "derive", "cache"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }